--- a/index.html
+++ b/index.html
@@ -467,6 +467,7 @@
             AV.init({
                 appId: LEANCLOUD_APP_ID,
                 appKey: LEANCLOUD_APP_KEY
+                serverURL: 'https://gnrrmmiw.lc-cn-n1-shared.com'
             });
             console.log("LeanCloud SDK 初始化成功!");
         } else {
@@ -1104,3 +1105,4 @@
     </script>
 </body>
 </html>
+
