--- a/index.html
+++ b/index.html
@@ -466,8 +466,8 @@
         if (typeof AV !== 'undefined') {
             AV.init({
                 appId: LEANCLOUD_APP_ID,
-                appKey: LEANCLOUD_APP_KEY
-                serverURL: 'https://gnrrmmiw.lc-cn-n1-shared.com'
+                appKey: LEANCLOUD_APP_KEY,
+                serverURL: 'https://gnrrmmiw.lc-cn-n1-shared.com'// <-- 新增这一行
             });
             console.log("LeanCloud SDK 初始化成功!");
         } else {
@@ -1105,4 +1105,5 @@
     </script>
 </body>
 </html>
+
 
