--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
             AV.init({
                 appId: LEANCLOUD_APP_ID,
                 appKey: LEANCLOUD_APP_KEY,
-                serverURL: 'https://gnrrmmiw.lc-cn-n1-shared.com'// <-- 新增这一行
+                serverURL: 'https://gnrrmmiw.lc-cn-n1-shared.com', // <-- 新增这一行
             });
             console.log("LeanCloud SDK 初始化成功!");
         } else {
@@ -1105,5 +1105,6 @@
     </script>
 </body>
 </html>
+
 
 
