--- a/index.html
+++ b/index.html
@@ -467,7 +467,8 @@
             AV.init({
                 appId: LEANCLOUD_APP_ID,
                 appKey: LEANCLOUD_APP_KEY,
-                serverURL: 'https://gnrrmmiw.lc-cn-n1-shared.com', // <-- 新增这一行
+                serverURLs: {
+                engine: 'https://gnrrmmiw.lc-cn-n1-shared.com' // 注意：是 engine
             });
             console.log("LeanCloud SDK 初始化成功!");
         } else {
@@ -1105,6 +1106,7 @@
     </script>
 </body>
 </html>
+
 
 
 
