--- a/index.html
+++ b/index.html
@@ -469,6 +469,7 @@
                 appKey: LEANCLOUD_APP_KEY,
                 serverURLs: {
                 engine: 'https://gnrrmmiw.lc-cn-n1-shared.com' // 注意：是 engine
+                } // ← 这里补上 serverURLs 的右大括号
             });
             console.log("LeanCloud SDK 初始化成功!");
         } else {
@@ -1106,6 +1107,7 @@
     </script>
 </body>
 </html>
+
 
 
 
