--- a/index.html
+++ b/index.html
@@ -467,9 +467,7 @@
         AV.init({
         appId: LEANCLOUD_APP_ID,
         appKey: LEANCLOUD_APP_KEY,
-        serverURLs: {
-            engine: 'https://gnrrmmiw.lc-cn-n1-shared.com' // 可以保留注释，但建议移行
-        }
+        serverURL: 'https://gnrrMmiWlgjgfM48TBAFmymM-gzGzoHsz.apiclouds.com'
     });
     console.log("LeanCloud SDK 初始化成功!");
 } else {
@@ -1107,3 +1105,4 @@
     </script>
 </body>
 </html>
+
