--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
         AV.init({
         appId: LEANCLOUD_APP_ID,
         appKey: LEANCLOUD_APP_KEY,
-        serverURL: 'https://gnrrMmiWlgjgfM48TBAFmymM-gzGzoHsz.apiclouds.com'
+        serverURL: 'https://leancloud.cn'
     });
     console.log("LeanCloud SDK 初始化成功!");
 } else {
@@ -1105,4 +1105,5 @@
     </script>
 </body>
 </html>
+
 
