--- a/index.html
+++ b/index.html
@@ -947,18 +947,18 @@
             }
         }
 
-        function endGame() {
-            gameState.isGameActive = false;
-            if (gameState.timer) {
-                clearInterval(gameState.timer);
-            }
+        async function endGame() { // <-- 变化点 1: 在函数前添加 async
+            gameState.isGameActive = false;
+            if (gameState.timer) {
+                clearInterval(gameState.timer);
+            }
 
-            // 保存本次挑战记录
-            saveChallengeRecord();
+            // 保存本次挑战记录
+            await saveChallengeRecord(); // <-- 变化点 2: 在函数前添加 await
 
-            elements.gameArea.classList.add('hidden');
-            showResults();
-        }
+            elements.gameArea.classList.add('hidden');
+            showResults();
+        }
 
         function showResults() {
             elements.resultArea.classList.remove('hidden');
@@ -1105,6 +1105,7 @@
     </script>
 </body>
 </html>
+
 
 
 
