--- a/index.html
+++ b/index.html
@@ -680,17 +680,18 @@ async function renderHistoryList(targetElement) {
         /**
          * 显示历史得分页面
          */
-async function showHistoryPage() {
-    elements.setupArea.classList.add('hidden');
-    elements.gameArea.classList.add('hidden');
-    elements.resultArea.classList.add('hidden');
-    elements.historyPage.classList.remove('hidden');
+        async function showHistoryPage() {
+             // 隐藏其他所有区域
+             elements.setupArea.classList.add('hidden');
+             elements.gameArea.classList.add('hidden');
+             elements.resultArea.classList.add('hidden');
 
-    // 显示加载中
-    elements.historyListOnPage.innerHTML = '<p style="text-align:center; color:#666;">加载中...</p>';
+             // 显示历史页面
+             elements.historyPage.classList.remove('hidden');
 
-    await renderHistoryList(elements.historyListOnPage);
-}
+             // 渲染历史记录到新页面
+             await renderHistoryList(elements.historyListOnPage);
+        }
 
         /**
          * 返回设置页 (首页)，并刷新历史记录
@@ -1103,5 +1104,3 @@ async function showHistoryPage() {
     </script>
 </body>
 </html>
-
-
