--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
     <div class="container">
         <!-- 首页区域 -->
         <div id="setupArea">
-            <h1>小百合数学达人养成记 - 100以内±法</h1>
+            <h1>数学达人养成记 - 100以内±法</h1>
 
             <div class="settings">
                 <div class="setting-item">
@@ -1105,4 +1105,5 @@
     </script>
 </body>
 </html>
+
 
