--- a/index.html
+++ b/index.html
@@ -458,22 +458,23 @@
 <script src="//cdn.jsdelivr.net/npm/leancloud-storage@4.14.0/dist/av-min.js"></script>
 
     <script>
-        // ⚠️ 【重要】请将这两个占位符替换成您自己的真实 App ID 和 App Key
-        const LEANCLOUD_APP_ID = 'gnrrMmiWlgjgfM48TBAFmymM-gzGzoHsz';
-        const LEANCLOUD_APP_KEY = '4rMp4VCKuzBvSiVzzGuVgbUj';
-        const LEANCLOUD_CLASS_NAME = 'MathChallengeRecord'; // LeanCloud中的存储表名
+        // ⚠️ 【重要】请将这两个占位符替换成您自己的真实 App ID 和 App Key
+        const LEANCLOUD_APP_ID = 'gnrrMmiWlgjgfM48TBAFmymM-gzGzoHsz';
+        const LEANCLOUD_APP_KEY = '4rMp4VCKuzBvSiVzzGuVgbUj';
+        const LEANCLOUD_CLASS_NAME = 'MathChallengeRecord'; // LeanCloud中的存储表名
 
-        if (typeof AV !== 'undefined') {
-        AV.init({
-        appId: LEANCLOUD_APP_ID,
-        appKey: LEANCLOUD_APP_KEY,
-        serverURL: 'https://gnrrMmiWlgjgfM48TBAFmymM-gzGzoHsz.apiclouds.com'
-    });
-    console.log("LeanCloud SDK 初始化成功!");
-} else {
-    console.error("LeanCloud SDK 加载失败!");
-}
-    </script>
+        if (typeof AV !== 'undefined') {
+            // 确保这里使用了完整的 REST API 域名
+            AV.init({
+                appId: LEANCLOUD_APP_ID,
+                appKey: LEANCLOUD_APP_KEY,
+                serverURL: 'https://gnrrMmiWlgjgfM48TBAFmymM-gzGzoHsz.apiclouds.com' // <-- 使用您错误信息中的这个完整域名
+            });
+            console.log("LeanCloud SDK 初始化成功!");
+        } else {
+            console.error("LeanCloud SDK 加载失败!");
+        }
+    </script>
     <div class="particles" id="particles"></div>
 
     <script>
@@ -1105,5 +1106,6 @@
     </script>
 </body>
 </html>
+
 
 
