--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
         <div id="resultArea" class="result hidden">
             <div id="encouragement" class="encouragement"></div>
             <div class="review" id="review"></div>
-            <button class="btn btn-start" onclick="returnToSetup()" style="margin-top: 20px;">返回设置页</button>
+            <button class="btn btn-start" onclick="returnToSetup()" style="margin-top: 20px;">返回首页</button>
         </div>
 
         <!-- 新增的历史得分页面 -->
@@ -696,7 +696,7 @@
         }
 
         /**
-         * 返回设置页 (首页)，并刷新历史记录
+         * 返回首页 (首页)，并刷新历史记录
          */
         function returnToSetup() {
             // 隐藏所有其他区域
@@ -1106,6 +1106,7 @@
     </script>
 </body>
 </html>
+
 
 
 
