--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
             AV.init({
                 appId: LEANCLOUD_APP_ID,
                 appKey: LEANCLOUD_APP_KEY,
-                serverURL: 'https://gnrrMmiWlgjgfM48TBAFmymM-gzGzoHsz.apiclouds.com' // <-- 使用您错误信息中的这个完整域名
+                serverURL: 'https://gnrrmmiw.lc-cn-n1-shared.com' // <-- 使用您错误信息中的这个完整域名
             });
             console.log("LeanCloud SDK 初始化成功!");
         } else {
@@ -1106,6 +1106,7 @@
     </script>
 </body>
 </html>
+
 
 
 
