--- a/index.html
+++ b/index.html
@@ -782,25 +782,24 @@
             oscillator.stop(audioContext.currentTime + 0.8);
         }
 
-        // 修复语音播报功能
-        function speak(text) {
-            if ('speechSynthesis' in window) {
-                // 等待语音引擎准备就绪
-                if (speechSynthesis.speaking) {
-                    speechSynthesis.cancel(); // 取消之前的语音
-                }
+       // 修复语音播报功能
+        function speak(text) {
+            if ('speechSynthesis' in window) {
+                // 必须在用户交互的函数内同步执行 cancel 和 speak
+                if (speechSynthesis.speaking) {
+                    speechSynthesis.cancel(); // 取消之前的语音，保持同步
+                }
 
-                const utterance = new SpeechSynthesisUtterance(text);
-                utterance.lang = 'zh-CN';
-                utterance.rate = 0.8; // 语速稍慢，便于理解
-                utterance.pitch = 1.2; // 音调稍高，更亲切
+                const utterance = new SpeechSynthesisUtterance(text);
+                utterance.lang = 'zh-CN';
+                utterance.rate = 0.8; // 语速稍慢，便于理解
+                utterance.pitch = 1.2; // 音调稍高，更亲切
 
-                // 语音播报前的准备
-                setTimeout(() => {
-                    speechSynthesis.speak(utterance);
-                }, 50); // 延迟50ms确保语音引擎已准备
-            }
-        }
+                // **核心修改：立即调用 speak，移除 setTimeout**
+                speechSynthesis.speak(utterance);
+            } else {
+                console.warn("当前浏览器不支持 Speech Synthesis API.");
+            }
 
         // 读取游戏规则
         function readRules() {
@@ -1106,6 +1105,7 @@
     </script>
 </body>
 </html>
+
 
 
 
