--- a/index.html
+++ b/index.html
@@ -1075,16 +1075,17 @@
         // 新增历史按钮监听器
         elements.historyBtn.addEventListener('click', showHistoryPage);
 
-        // 键盘 Enter 监听器
+        // 键盘 Enter 监听器 - 修复自动提交问题
         elements.answerInput.addEventListener('keypress', (e) => {
-            if (e.key === 'Enter') {
-                if (!elements.submitBtn.classList.contains('hidden')) {
-                    submitAnswer();
-                } else if (!elements.nextBtn.classList.contains('hidden')) {
-                    nextQuestion();
-                }
-            }
-        });
+        if (e.key === 'Enter') {
+        e.preventDefault(); // 👈 关键！阻止 Enter 键的默认提交行为
+        if (!elements.submitBtn.classList.contains('hidden')) {
+            submitAnswer();
+        } else if (!elements.nextBtn.classList.contains('hidden')) {
+            nextQuestion();
+        }
+    }
+});
 
         // 页面加载完成时初始化
         window.onload = function() {
@@ -1106,4 +1107,3 @@
     </script>
 </body>
 </html>
-
